# blocksense

./: .dockerignore  .editorconfig  .env.demo  .env.example  .envrc  .gitattributes  .gitignore  .prettierignore  .yarnrc.yml  Cargo.toml  Dockerfile  Dockerfile-reporter  Dockerfile-reporter-old  Dockerfile-sequencer  Justfile  README.md  docker-compose.yml  eslint.config.mjs  flake.nix  knip.json  networks.json  package.json  rollup.config.base.js  spin.toml  tomlfmt.toml  tsconfig.base.json  turbo.json
apps/cli/: Cargo.toml
apps/cli/src/: spin_manifest.rs
apps/cli/src/commands/: build.rs  oracle.rs
apps/cli/test/: blocksense-config.json
apps/eth_relayer/: Cargo.toml  eth_relayer_config.json
apps/eth_relayer/src/: lib.rs  updates_reader.rs
apps/eth_relayer/src/providers/: eth_send_utils.rs  provider.rs
apps/example-wasi-nn/: Cargo.toml
apps/example-wasi-nn/src/: main.rs
apps/gnosis-safe-transaction-signer/: Cargo.toml
apps/gnosis-safe-transaction-signer/src/: main.rs
apps/oracles/: Cargo.toml  rustc-ice-2025-08-14T14_04_08-486654.txt
apps/oracles/borrow-rates/: Cargo.toml  spin.toml
apps/oracles/borrow-rates/src/: domain.rs  fetch.rs  lib.rs
apps/oracles/cex-price-feeds/: Cargo.toml  spin.toml
apps/oracles/cex-price-feeds/src/: common.rs  fetch_prices.rs  lib.rs  logging.rs  vwap.rs
apps/oracles/chicken/: Cargo.toml  spin.toml
apps/oracles/chicken-farm/: Cargo.toml  spin.toml
apps/oracles/chicken-farm/src/: lib.rs
apps/oracles/chicken/src/: lib.rs
apps/oracles/commodities-price-feeds/: Cargo.toml  spin.toml
apps/oracles/commodities-price-feeds/src/: fetch_prices.rs  lib.rs  logging.rs
apps/oracles/crypto-price-feeds/: Cargo.toml  spin.toml
apps/oracles/crypto-price-feeds/src/: binance.rs  bitfinex.rs  bitget.rs  common.rs  fetch_prices.rs  lib.rs  okx.rs  vwap.rs
apps/oracles/dummy-oracle/: Cargo.toml  spin.toml
apps/oracles/dummy-oracle/src/: lib.rs
apps/oracles/eth-gas-info/: Cargo.toml  spin.toml
apps/oracles/eth-gas-info/src/: domain.rs  fetch.rs  lib.rs
apps/oracles/eth-rpc/: Cargo.toml  spin.toml
apps/oracles/eth-rpc/src/: lib.rs  logging.rs
apps/oracles/exsat-holdings/: Cargo.toml  spin.toml
apps/oracles/exsat-holdings/src/: lib.rs
apps/oracles/forex-price-feeds/: Cargo.toml  spin.toml
apps/oracles/forex-price-feeds/src/: domain.rs  fetch_prices.rs  lib.rs  logging.rs
apps/oracles/gecko-terminal/: Cargo.toml  spin.toml
apps/oracles/gecko-terminal/src/: lib.rs  logging.rs
apps/oracles/hyper/: Cargo.toml  spin.toml
apps/oracles/hyper-borrow-rates/: Cargo.toml  spin.toml
apps/oracles/hyper-borrow-rates/src/: domain.rs  fetch.rs  lib.rs
apps/oracles/hyper/src/: domain.rs  fetch.rs  lib.rs
apps/oracles/metals-price-feeds/: Cargo.toml  spin.toml
apps/oracles/metals-price-feeds/src/: lib.rs  logging.rs
apps/oracles/mock/: Cargo.toml  spin.toml
apps/oracles/mock/src/: lib.rs
apps/oracles/sports-db/: Cargo.toml  spin.toml
apps/oracles/sports-db/src/: fetch_results.rs  lib.rs  logging.rs
apps/oracles/spout-rwa/: Cargo.toml  spin.toml
apps/oracles/spout-rwa/src/: lib.rs
apps/oracles/stock-price-feeds/: Cargo.toml  spin.toml
apps/oracles/stock-price-feeds/src/: fetch_prices.rs  lib.rs  logging.rs  types.rs  utils.rs
apps/reporter/: CMC_API_KEY  Cargo.toml  YH_FINANCE_API_KEY  reporter_config.json
apps/sequencer/: Cargo.toml  README.md  sequencer_config.json
apps/sequencer/src/: aggregate_batch_consensus_processor.rs  aggregated_results_consensus_manager.rs  block_creator.rs  blocks_reader.rs  lib.rs  metrics_collector.rs  pyroscope_profiler.rs  sequencer_state.rs
apps/sequencer/src/feeds/: block_creator.rs  consensus_second_round_manager.rs  feed_allocator.rs  feed_config_conversions.rs  feed_slots_manager.rs  feed_slots_processor.rs  feed_workers.rs  feeds_registry.rs  feeds_slots_manager.rs  mod.rs  votes_result_batcher.rs  votes_result_sender.rs
apps/sequencer/src/http_handlers/: admin.rs  data_feeds.rs  http_handlers.rs
apps/sequencer/src/metrics_collector/: metrics_collector.rs
apps/sequencer/src/providers/: Reorg.md  adfs.rs  adfs_gen_calldata.rs  dag_inclusion_tracking.rs  eth_send_utils.rs  historical_data_feed_store_v2.rs  inflight_observations.rs  mod.rs  multicall.rs  provider.rs  reorg_tracking.rs  ws.rs
apps/sequencer/src/reporters/: reporter.rs
apps/sequencer/src/testing/: sequencer_state.rs
apps/sequencer/tests/: sequencer_config.json
apps/sequencer_tests/: Cargo.toml
apps/trigger-oracle/: Cargo.toml  README.md
apps/trigger-oracle/src/: custom_serde.rs  lib.rs  main.rs
apps/trigger-oracle/src/consensus_second_round/: listener.rs  mod.rs  processor.rs
apps/wit-converter/: Cargo.toml
apps/wit-converter/src/: converter.rs  lib.rs  main.rs  schema.rs
libs/alpaca_core/: Cargo.toml
libs/alpaca_core/src/: alpaca_core.rs  config.rs  lib.rs
libs/blockchain_data_model/: Cargo.toml
libs/blockchain_data_model/src/: in_mem_db.rs  lib.rs
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/data_feeds/: Cargo.toml
libs/data_feeds/src/: feeds_processing.rs  generate_signature.rs  orchestrator.rs  types.rs
libs/data_providers_sdk/: Cargo.toml
libs/derive/: Cargo.toml
libs/feed_registry/: Cargo.toml  feeds_config.json
libs/feed_registry/src/: aggregate.rs  feed_registration_cmds.rs  registry.rs  types.rs
libs/feeds_processing/: Cargo.toml
libs/feeds_processing/src/: adfs_gen_calldata.rs  utils.rs
libs/gnosis_safe/: Cargo.toml
libs/gnosis_safe/src/: data_types.rs  utils.rs
libs/metrics/: Cargo.toml
libs/metrics/src/: actix_server.rs  metrics.rs  registry.rs
libs/sdk/: Cargo.toml  build-and-install-plugin.sh
libs/sdk/api/: api_interface.rs
libs/sdk/data_providers/: Cargo.toml
libs/sdk/macro/: Cargo.toml
libs/sdk/macro/src/: lib.rs
libs/sdk/sdk/: Cargo.toml
libs/sdk/src/: http.rs  lib.rs  oracle.rs  rpc.rs
libs/sdk/trigger-oracle/: Cargo.toml
libs/sdk/wit/: blocksense-oracle.wit
libs/utils/: Cargo.toml  build.rs
libs/utils/src/: build_info.rs  constants.rs  counter_unbounded_channel.rs  lib.rs  logging.rs
(+1693 files in other folders)
