[workspace]
members = [
  "apps/cli",
  "apps/sequencer",
  "apps/sequencer_tests",
  "apps/trigger-oracle",
  "libs/alpaca_core",
  "libs/anomaly_detection",
  "libs/blockchain_data_model",
  "libs/config",
  "libs/crypto",
  "libs/data_feeds",
  "libs/feed_registry",
  "libs/feeds_processing",
  "libs/metrics",
  "libs/registry",
  "libs/utils",
]

resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["The Blocksense team"]
license = "to be decided"
edition = "2021"

[workspace.dependencies]
blocksense-anomaly-detection = { path = "libs/anomaly_detection" }
blocksense-blockchain-data-model = { path = "libs/blockchain_data_model" }
blocksense-config = { path = "libs/config" }
blocksense-crypto = { path = "libs/crypto" }
blocksense-data-feeds = { path = "libs/data_feeds" }
blocksense-feed-registry = { path = "libs/feed_registry" }
blocksense-feeds-processing = { path = "libs/feeds_processing" }
blocksense-gnosis-safe = { path = "libs/gnosis_safe" }
blocksense-metrics = { path = "libs/metrics" }
blocksense-registry = { path = "libs/registry" }
blocksense-utils = { path = "libs/utils" }

actix-test = "0.1.5"
actix-web = "4.11.0"
alloy = "1.0.9"
alloy-primitives = "1.4.1"
alloy-u256-literal = "^0.1"
anyhow = "1"
blst = "0.3.16"
bytes = "1.10.1"
chrono = "0.4.42"
console-subscriber = "0.4.0"
csv = "1.4.0"
curl = "0.4.49"
dirs = "6.0.0"
extended-isolation-forest = "0.2.3"
eyre = "0.6.12"
futures = "0.3"
futures-util = "0.3.30"
hdbscan = "0.11.0"
hex = "0.4.3"
hex-literal = "1.0.0"
http = "1.3.1"
hyper = "1.7.0"
indexmap = "2"
itertools = "0.14.0"
json-patch = "4.1.0"
lazy_static = "1.4.0"
log = "0.4"
num = "0.4.3"
once_cell = "1.20.2"
outbound-http = { git = "https://github.com/blocksense-network/spin", branch = "blocksense" }
paste = "1.0.15"
port_scanner = "0.1.5"
prettytable-rs = "0.10"
prometheus = { package = "prometheus", version = "0.13.4" }
rand = "0.9"
rand_distr = "0.5.1"
rdkafka = "0.38.0"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["multipart", "blocking", "json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
ringbuf = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde-this-or-that = "0.5.0"
serde_derive = "1.0.210"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
spin-app = { git = "https://github.com/blocksense-network/spin", branch = "blocksense" }
spin-core = { git = "https://github.com/blocksense-network/spin", branch = "blocksense" }
spin-outbound-networking = { git = "https://github.com/blocksense-network/spin", branch = "blocksense" }
spin-sdk = "3.0.1"
spin-trigger = { git = "https://github.com/blocksense-network/spin", branch = "blocksense" }
ssz_rs = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tempfile = "3.23.0"
terminal = { git = "https://github.com/blocksense-network/spin", branch = "blocksense" }
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.16"
toml = "0.8.13"
toml_edit = "0.22.24"
tracing = { version = "0.1", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = "1.16.0"
vergen = "9.0.6"
wasmtime = "22.0.0"
wasmtime-wasi = "22.0.0"
wasmtime-wasi-http = "22.0.0"
wit-bindgen = "0.16.0"
