[package]
name = "blocksense-cli"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocksense-registry = { workspace = true }
blocksense-utils = { workspace = true }

anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
indexmap = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

