[package]
name = "eth_relayer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blocksense-data-feeds = { workspace = true }
blocksense-utils = { workspace = true }
blocksense-crypto = { workspace = true }
blocksense-config = { workspace = true }
blocksense-feed-registry = { workspace = true }
blocksense-registry = { workspace = true }
blocksense-feeds-processing = { workspace = true }
blocksense-metrics = { workspace = true }

alloy = { workspace = true, features = [
    "sol-types",
    "contract",
    "network",
    "node-bindings",
    "providers",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "transports",
    "transport-http",
    "transport-ipc",
    "transport-ws",
    "pubsub",
] }

alloy-primitives = { workspace = true }

regex = { workspace = true }
reqwest = { workspace = true }
# async
tokio = { workspace = true }

# misc
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
url = { workspace = true }
port_scanner = { workspace = true }
curl = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }
rdkafka = { workspace = true, features = ["dynamic-linking"] }
futures-util = { workspace = true }
actix-web = { workspace = true }
paste = { workspace = true }
ringbuf = { workspace = true }

[[bin]]
name = "eth_relayer"
path = "bin/eth_relayer.rs"
