[package]
name = "example-wasi-nn"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "19.0.1", features = ["cranelift"] }
wasmtime-wasi = { version = "19.0.1" }
wasi-common = { version = "19.0.1", features = ["sync"] }
wasmtime-wasi-nn = { version = "19.0.1", features = ["openvino"] }
anyhow = "1.0.81"
cap-std = "3.0.0"
