[package]
name = "gnosis-safe-transaction-signer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
alloy = { version = "0.6", features = [
  "sol-types",
  "contract",
  "network",
  "node-bindings",
  "providers",
  "rpc",
  "rpc-client",
  "rpc-types-eth",
  "rpc-types-trace",
  "signers",
  "signer-keystore",
  "signer-ledger",
  "signer-mnemonic",
  "signer-trezor",
  "signer-yubihsm",
  "transports",
  "transport-http",
  "transport-ipc",
  "transport-ws",
  "pubsub",
] }
eyre = "0.6.12"
hex = "0.4.3"
tokio = { version = "1.41.1", features = ["full"] }
