[package]
name = "reporter"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_feeds = { path = "../../libs/data_feeds"}
prometheus = { path = "../../libs/prometheus" }
feed_registry = { path = "../../libs/feed_registry" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "launch_reporter"
path = "bin/launch_reporter.rs"

[[bin]]
name = "launch_prometheus_server"
path = "bin/prometheus_server.rs"

[[bin]]
name = "check_cmc_api_coverage"
path = "bin/check_cmc_api_coverage.rs"

