[package]
name = "sequencer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
profile = []

[dependencies]
blocksense-anomaly-detection = { workspace = true }
blocksense-blockchain-data-model = { workspace = true }
blocksense-config = { workspace = true }
blocksense-crypto = { workspace = true }
blocksense-data-feeds = { workspace = true }
blocksense-feed-registry = { workspace = true }
blocksense-feeds-processing = { workspace = true }
blocksense-gnosis-safe = { workspace = true }
blocksense-metrics = { workspace = true }
blocksense-registry = { workspace = true }
blocksense-utils = { workspace = true }

actix-web = { workspace = true }
alloy = { workspace = true, features = [
    "sol-types",
    "contract",
    "network",
    "node-bindings",
    "providers",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "transports",
    "transport-http",
    "transport-ipc",
    "transport-ws",
    "pubsub",
] }
alloy-primitives = { workspace = true }
alloy-u256-literal = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
console-subscriber = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
paste = { workspace = true }
pprof = { version = "0.15", features = ["flamegraph"] }
pyroscope = "0.5.8"
pyroscope_pprofrs = "0.2.10"
rand = { workspace = true }
rdkafka = { workspace = true, features = ["dynamic-linking"] }
regex = { workspace = true }
reqwest = { workspace = true }
ringbuf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
actix-test = { workspace = true }

[[bin]]
name = "sequencer"
path = "bin/sequencer_runner.rs"
