[package]
name = "blockchain_data_model"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../../libs/utils" }
serde = { version = "1.0.218", features = ["derive", "serde_derive"]}
ssz_rs = "0.9.0"
hex-literal = "0.4.1"
hex = "0.4.3"
anyhow = "1.0.96"
tracing = { version = "0.1.40", features = ["async-await", "log"] }
