[package]
name = "config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
dirs = "5.0.1"
serde = { version = "1.0.214", features = ["derive"]}
anyhow = "1.0.93"
serde_json = "1.0.132"
hex = "0.4.3"
tracing = { version = "0.1.40", features = ["log"] }
