[package]
name = "config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocksense-registry = { path = "../registry" }
utils = {path = "../utils"}
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"]}
anyhow = "1.0.97"
serde_json = "1.0.140"
hex = "0.4.3"
tracing = { version = "0.1.41", features = ["log"] }
