[package]
name = "blocksense-config"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocksense-registry = { workspace = true }
blocksense-utils = { workspace = true }

anyhow = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, features = ["log"] }
