[package]
name = "data_feeds"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true



[dependencies]
prometheus = { path = "../prometheus" }
derive = { path = "../derive"}
utils = { path = "../utils" }
crypto = { path = "../crypto" }
feed_registry = { path = "../feed_registry"}
config = { path = "../config"}

alloy = { version = "0.11", features = [
    "sol-types",
    "contract",
    "network",
    "node-bindings",
    "providers",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "transports",
    "transport-http",
    "transport-ipc",
    "transport-ws",
    "pubsub",
] }

log = "0.4.26"
anyhow = "1.0.97"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
erased-serde = "0.4.6"
ringbuf = "0.4.7"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
rand = "0.9.0"
curl = "0.4.47"
async-trait = "0.1.87"
assert_cmd = "2.0.14"
dirs = "6.0.0"
strum = { version = "0.27.1", features = ["derive"] }
http = "1.2.0"

# Service APIs
yahoo_finance_api = {"version" = "2.4.0", features = ["blocking"]}
cmc = "0.4.4"
fred-rs = "0.1.1"
weer_api = "0.1.1"
tokio = "1.44.0"
tokio-test = "0.4.4"
