[package]
name = "blocksense-data-feeds"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blocksense-config = { workspace = true }
blocksense-crypto = { workspace = true }
blocksense-feed-registry = { workspace = true }
blocksense-utils = { workspace = true }

anyhow = { workspace = true }
dirs = { workspace = true }
http = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
ringbuf = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
tracing-subscriber = { workspace = true, features = ["json"] }
