[package]
name = "blocksense-data-providers-sdk"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "blocksense_data_providers_sdk"

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
