[package]
name = "derive"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.88"
quote = "1.0.36"
syn = "2.0.82"

[lib]
proc-macro=true
