[package]
name = "derive"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.96"

[lib]
proc-macro=true
