[package]
name = "derive"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = "2.0.100"

[lib]
proc-macro=true
