[package]
name = "feed_registry"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crypto = { path = "../crypto" }
sequencer_config = { path = "../sequencer_config" }
utils = { path = "../utils" }

lazy_static = "1.5.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
thiserror = "1.0.63"
tracing = { version = "0.1.40", features = ["async-await", "log"] }
ringbuf = "0.4.0"
tokio = { version = "1.39.2", features = ["full"] }
