[package]
name = "blocksense-feed-registry"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blocksense-config = { workspace = true }
blocksense-crypto = { workspace = true }
blocksense-registry = { workspace = true }
blocksense-utils = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
num = { workspace = true, features = ["serde"] }
ringbuf = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }

[dev-dependencies]
futures = { workspace = true }
