[package]
name = "blocksense-feeds-processing"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blocksense-registry = { workspace = true }
blocksense-anomaly-detection = { workspace = true }
blocksense-feed-registry = { workspace = true }
blocksense-data-feeds = { workspace = true }
blocksense-config = { workspace = true }
blocksense-utils = { workspace = true }
blocksense-gnosis-safe = { workspace = true }
blocksense-crypto = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
ringbuf = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
