[package]
name = "blocksense-feeds-processing"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blocksense-anomaly-detection = { workspace = true }
blocksense-config = { workspace = true }
blocksense-crypto = { workspace = true }
blocksense-data-feeds = { workspace = true }
blocksense-feed-registry = { workspace = true }
blocksense-gnosis-safe = { workspace = true }
blocksense-registry = { workspace = true }
blocksense-utils = { workspace = true }

alloy = { workspace = true, features = [
    "sol-types",
    "contract",
    "network",
    "node-bindings",
    "providers",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "transports",
    "transport-http",
    "transport-ipc",
    "transport-ws",
    "pubsub",
] }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
itertools = "0.14.0"
once_cell = { workspace = true }
ringbuf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
