[package]
name = "blocksense-gnosis-safe"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blocksense-feed-registry = { workspace = true }
blocksense-data-feeds = { workspace = true }
hex = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
