[workspace]
resolver = "3"
members = [
  "sdk",
  "macro",
  "data_providers",
]

[workspace.package]
version = "0.1.1"
authors = ["The Blocksense team"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
blocksense-sdk = { path = "./sdk" }
blocksense-macro = { path = "./macro" }
blocksense-data-providers-sdk = { path = "./data_providers" }

anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde-this-or-that = "0.5.0"
itertools = "0.14.0"
futures = "0.3"
url = "2.5"
