[workspace]
resolver = "3"
members = ["data_providers", "macro", "sdk"]

[workspace.package]
version = "0.1.1"
authors = ["The Blocksense team"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
blocksense-data-providers-sdk = { path = "./data_providers" }
blocksense-macro = { path = "./macro" }
blocksense-sdk = { path = "./sdk" }

anyhow = "1"
futures = "0.3"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde-this-or-that = "0.5.0"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
url = "2.5"
