[package]
name = "utils"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
once_cell = "1.20.2"
console-subscriber = "0.4.1"
dirs = "5.0.1"
anyhow = "1.0.93"

[build-dependencies]
# All features enabled
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }
