[package]
name = "blocksense-utils"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
console-subscriber = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
ssz_rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
tracing-subscriber = { workspace = true, features = ["json"] }

[build-dependencies]
# All features enabled
vergen = { workspace = true, features = ["build", "cargo", "rustc", "si"] }
