[package]
name = "borrow-rates"
authors = ["Emil Ivanichkov"]
description = "Oracle script serving borrow rate data from DeFi lending protocols (e.g., Aave and similar platforms)."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
blocksense-sdk = { workspace = true }
blocksense-data-providers-sdk = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde-this-or-that = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
prettytable-rs = { workspace = true }
alloy = { workspace = true }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
