[package]
name = "borrow-rates"
authors = ["Emil Ivanichkov"]
description = "Oracle script serving borrow rate data from DeFi lending protocols (e.g., Aave and similar platforms)."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
blocksense-data-providers-sdk = { workspace = true }
blocksense-sdk = { workspace = true }

alloy = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
prettytable-rs = { workspace = true }
serde = { workspace = true }
serde-hex = { workspace = true }
serde-this-or-that = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
wit-bindgen = { workspace = true }
