[package]
name = "eth-rpc"
authors = ["Yordan Madzhunkov"]
description = "Oracle script exposing Ethereum RPC-based data feeds, including redemption rates such as YieldNest Restaked Ethereum / Wrapped Ethereum via on-chain contract calls."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
blocksense-sdk = { workspace = true }

wit-bindgen = "0.16.0"
anyhow = "1.0.82"
serde_json = "1.0"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
prettytable-rs = "0.10"
alloy = { workspace = true }
itertools = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
