[package]
name = "exsat-holdings"
authors = ["Yordan Madzhunkov"]
description = "Oracle script exposing the current Bitcoin reserves of the exSat network."
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
blocksense-sdk = { workspace = true }

anyhow = { workspace = true }
prettytable-rs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
wit-bindgen = { workspace = true }
